packages/editor/src/styles/prosemirror.css
/* .ProseMirror {
  @apply pt-2.5 pb-4 px-3.5;
} */

.ProseMirror .is-editor-empty:first-child::before {
  content: attr(data-placeholder);
  float: left;
  color: hsla(var(--muted-foreground));
  pointer-events: none;
  height: 0;
}

.ProseMirror .is-empty::before {
  content: attr(data-placeholder);
  float: left;
  color: hsla(var(--muted-foreground));
  pointer-events: none;
  height: 0;
}

@keyframes spinning {
  to {
    transform: rotate(360deg);
  }
}

/* Custom TODO list checkboxes – shoutout to this awesome tutorial: https://moderncss.dev/pure-css-custom-checkbox-style/ */


ul[data-type="taskList"] li>label input[type="checkbox"] {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--background);
  margin: 0;
  cursor: pointer;
  width: 1.2em;
  height: 1.2em;
  position: relative;
  border-radius: 4px;
  top: 5px;
  border: 1px solid hsla(var(--primary));
  margin-right: 0.5rem;
  display: grid;
  place-content: center;

  &:hover {
    background-color: hsla(var(--secondary));
  }

  &:active {
    background-color: hsla(var(--secondary));
  }

  &:checked {
    background-color: hsla(var(--primary));
  }

  &::before {
    content: "";
    width: 0.65em;
    height: 0.65em;
    color: hsla(var(--primary-foreground));
    transform: scale(0);
    transition: 120ms transform ease-in-out;
    box-shadow: inset 1em 1em;
    transform-origin: center;
    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
  }

  &:checked::before {
    transform: scale(1);
  }
}

ul[data-type="taskList"] li[data-checked="true"]>div>p {
  text-decoration: line-through;
  text-decoration-thickness: 1px;
  opacity: 0.65;
}

